--- a/desafio_cognitive_ai.ipynb
+++ b/desafio_cognitive_ai.ipynb
@@ -6,7 +6,7 @@
       "name": "desafio_cognitive_ai.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMmsjwn0zIkuUN8RMIY6iG2",
+      "authorship_tag": "ABX9TyMuiwl8uvD8vImFKXyP/mW1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -68,7 +68,8 @@
         "import requests\n",
         "import matplotlib.pyplot as plt\n",
         "import numpy\n",
-        "import gzip"
+        "import gzip\n",
+        "import seaborn as sns"
       ],
       "execution_count": 0,
       "outputs": []
@@ -78,7 +79,7 @@
       "metadata": {
         "id": "UU92nP8cfaFe",
         "colab_type": "code",
-        "outputId": "2ab94197-aa18-499d-dfdd-93648fd67f79",
+        "outputId": "0741d257-2560-4004-bb9d-aa2217d25f79",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 238
@@ -94,7 +95,7 @@
         "\n",
         "print(ds.describe())"
       ],
-      "execution_count": 154,
+      "execution_count": 100,
       "outputs": [
         {
           "output_type": "stream",
@@ -167,14 +168,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 510
         },
-        "outputId": "6ffec27d-d6b2-40f4-e032-4c6a00ae4446"
+        "outputId": "a570551a-33a7-4e7a-e190-92fa56ac7271"
       },
       "source": [
         "dim = ds.shape\n",
         "print(dim)\n",
         "print(ds.columns)"
       ],
-      "execution_count": 156,
+      "execution_count": 102,
       "outputs": [
         {
           "output_type": "stream",
@@ -232,12 +233,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "f8a225c0-fda0-423e-dd24-4df3f50bbccc"
+        "outputId": "3837bf9d-6a38-443c-d4e9-ec5b6bc4c065"
       },
       "source": [
         "ds.info()"
       ],
-      "execution_count": 157,
+      "execution_count": 103,
       "outputs": [
         {
           "output_type": "stream",
@@ -368,12 +369,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 221
         },
-        "outputId": "06b95b55-c82e-4260-b36c-cf1a60824d79"
+        "outputId": "1af93618-4654-4d0c-d715-ae0b266cca59"
       },
       "source": [
         "ds.dtypes"
       ],
-      "execution_count": 159,
+      "execution_count": 105,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -396,7 +397,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 159
+          "execution_count": 105
         }
       ]
     },
@@ -444,12 +445,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 530
         },
-        "outputId": "56f902a0-94f5-4989-90f9-fb71f9497521"
+        "outputId": "d85edbeb-5050-447f-a7fa-1074c234b344"
       },
       "source": [
         "ds.head()"
       ],
-      "execution_count": 162,
+      "execution_count": 108,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -923,7 +924,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 162
+          "execution_count": 108
         }
       ]
     },
@@ -956,14 +957,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 356
         },
-        "outputId": "3731a715-9140-43a5-887d-53d74d2c180b"
+        "outputId": "e861b552-9c75-43d6-ffcc-ecd76e921f0c"
       },
       "source": [
         "plt.figure(figsize = (5,5))\n",
         "sns.boxplot(ds[\"price\"])\n",
         "ds.shape"
       ],
-      "execution_count": 163,
+      "execution_count": 109,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -975,7 +976,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 163
+          "execution_count": 109
         },
         {
           "output_type": "display_data",
@@ -1000,14 +1001,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 459
         },
-        "outputId": "1e8f12cb-41f1-4f7f-9f1d-2e66eec29c7e"
+        "outputId": "12fd0a6c-3bd9-43d1-eaca-e572ec418f45"
       },
       "source": [
         "plt.figure(figsize = (7,7))\n",
         "sns.set(style = \"whitegrid\")\n",
         "f = sns.distplot(ds[\"price\"])"
       ],
-      "execution_count": 164,
+      "execution_count": 110,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1050,13 +1051,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "f082ac89-2fd1-4557-fb26-51fd0814fdff"
+        "outputId": "c6542a7b-23d9-4831-ca87-097fa27d28c4"
       },
       "source": [
         "ds = ds[~((ds[\"price\"] < IF) | (ds[\"price\"] > OF))]\n",
         "ds.shape"
       ],
-      "execution_count": 166,
+      "execution_count": 112,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1068,7 +1069,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 166
+          "execution_count": 112
         }
       ]
     },
@@ -1087,7 +1088,7 @@
       "metadata": {
         "id": "vKgKxGLXdi1C",
         "colab_type": "code",
-        "outputId": "797dfec3-02e7-46ff-e654-d07af670fad9",
+        "outputId": "2c2800ed-937c-42b3-e5ed-81f5c92ac28f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -1099,19 +1100,19 @@
         "plt.figure(figsize=(27,27))\n",
         "sns.heatmap(ds.corr(), annot=True)"
       ],
-      "execution_count": 167,
+      "execution_count": 113,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7f1157db8dd8>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7f948d302cf8>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 167
+          "execution_count": 113
         },
         {
           "output_type": "display_data",
@@ -1128,6 +1129,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3KTXJB3KC734",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Escolha de algumas variáveis a partir da correlação**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "zha9Q6CLD92h",
@@ -1135,11 +1146,11 @@
         "colab": {}
       },
       "source": [
-        "ds[\"review_scores_rating\"] = pd.to_numeric(ds[\"review_scores_rating\"], errors= \"ignore\")\n",
-        "ds[\"review_scores_accuracy\"] = pd.to_numeric(ds[\"review_scores_accuracy\"], errors= \"ignore\")\n",
-        "ds[\"review_scores_cleanliness\"] = pd.to_numeric(ds[\"review_scores_cleanliness\"], errors= \"ignore\")\n",
-        "ds[\"review_scores_communication\"] = pd.to_numeric(ds[\"review_scores_communication\"], errors= \"ignore\")\n",
-        "ds[\"review_scores_location\"] = pd.to_numeric(ds[\"review_scores_location\"], errors= \"ignore\")"
+        "ds[\"accommodates\"] = pd.to_numeric(ds[\"accommodates\"], errors= \"ignore\")\n",
+        "ds[\"bathrooms\"] = pd.to_numeric(ds[\"bathrooms\"], errors= \"ignore\")\n",
+        "ds[\"bedrooms\"] = pd.to_numeric(ds[\"bedrooms\"], errors= \"ignore\")\n",
+        "ds[\"beds\"] = pd.to_numeric(ds[\"beds\"], errors= \"ignore\")\n",
+        "# ds[\"review_scores_location\"] = pd.to_numeric(ds[\"review_scores_location\"], errors= \"ignore\")"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1152,7 +1163,7 @@
         "colab": {}
       },
       "source": [
-        "ds = ds.replace(numpy.nan, 0)"
+        "ds = ds.replace(numpy.nan, 1)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1178,7 +1189,7 @@
         "#x = ds.drop(\"price\", axis = 1)\n",
         "\n",
         "#columns = ['review_score_rating', 'review_scores_accuracy','review_scores_cleanliness','review_scores_checkin','review_scores_communication','review_scores_location']\n",
-        "x = ds[['review_scores_rating', 'review_scores_accuracy','review_scores_cleanliness','review_scores_checkin','review_scores_communication','review_scores_location']]\n",
+        "x = ds[['accommodates', 'bathrooms','bedrooms','beds']]\n",
         "\n",
         "y = ds[\"price\"]"
       ],
@@ -1194,60 +1205,16 @@
       },
       "source": [
         "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.model_selection import RepeatedKFold\n",
         "\n",
-        "x_train, x_test,y_train,y_test = train_test_split(x,y,test_size = 0.3)"
+        "# rkf.split(X)\n",
+        "# x_train, x_test,y_train,y_test = train_test_split(x,y,test_size = 0.3)\n",
+        "random_state = 12883823\n",
+        "rkf = RepeatedKFold(n_splits=2, n_repeats=2, random_state=random_state)\n",
+        "x_train, x_test,y_train,y_test = rkf.split(x)"
       ],
       "execution_count": 0,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "A8jK59AwPBS6",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "from sklearn.preprocessing import StandardScaler\n",
-        "std = StandardScaler()\n",
-        "std.fit(x_train)\n",
-        "std_data = std.transform(x_train)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "zKFaVRZCPG23",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 333
-        },
-        "outputId": "f13c2971-b8eb-432e-e51f-b2e1558f5a4a"
-      },
-      "source": [
-        "\n",
-        "from scipy import stats\n",
-        "bx, lam = stats.boxcox(y_train)\n",
-        "y_total = bx"
-      ],
-      "execution_count": 193,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-193-85be5c7d5947>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mscipy\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mstats\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mbx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlam\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstats\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mboxcox\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0my_total\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbx\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/scipy/stats/morestats.py\u001b[0m in \u001b[0;36mboxcox\u001b[0;34m(x, lmbda, alpha)\u001b[0m\n\u001b[1;32m   1043\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1044\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0many\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1045\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Data must be positive.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1046\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1047\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mlmbda\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m  \u001b[0;31m# single transformation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: Data must be positive."
-          ]
-        }
-      ]
     },
     {
       "cell_type": "markdown",
@@ -1264,53 +1231,13 @@
       "metadata": {
         "id": "9jfX_Jr1PPpA",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 136
-        },
-        "outputId": "cb53fea0-3fdb-46a2-87f6-65b00e9f7206"
-      },
-      "source": [
-        "from sklearn.ensemble import RandomForestRegressor\n",
-        "#Training the model\n",
-        "rf = RandomForestRegressor(n_estimators = 1500, verbose=1, criterion='mse')\n",
-        "rf.fit(std_data, y_train)"
-      ],
-      "execution_count": 194,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "RandomForestRegressor(bootstrap=True, ccp_alpha=0.0, criterion='mse',\n",
-              "                      max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
-              "                      max_samples=None, min_impurity_decrease=0.0,\n",
-              "                      min_impurity_split=None, min_samples_leaf=1,\n",
-              "                      min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
-              "                      n_estimators=1500, n_jobs=None, oob_score=False,\n",
-              "                      random_state=None, verbose=0, warm_start=False)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 194
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "i6RYpqWFPUzj",
-        "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "#Standardization test data\n",
-        "from sklearn.preprocessing import StandardScaler\n",
-        "std = StandardScaler()\n",
-        "std.fit(x_test)\n",
-        "std_test = std.transform(x_test)"
+        "from sklearn.ensemble import RandomForestRegressor\n",
+        "\n",
+        "rf = RandomForestRegressor(n_estimators = 1500, verbose=1, criterion='mse')\n",
+        "rf.fit(x_train, y_train)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1333,8 +1260,7 @@
         "colab": {}
       },
       "source": [
-        "#Prediction\n",
-        "pred = rf.predict(std_test)"
+        "pred = rf.predict(x_test)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1352,21 +1278,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2MU3UbLSPKMa",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "#Box-Cox transformation for Test Response variable\n",
-        "bx, lam = stats.boxcox(y_test)\n",
-        "y_total_test = bx"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "XcXU9GY5PfcO",
         "colab_type": "code",
         "colab": {}
@@ -1376,7 +1287,7 @@
         "    err = ytest - pred\n",
         "    mse = sum(err**2)/(xtest.shape[0]-xtest.shape[1]-1)\n",
         "    rmse = numpy.sqrt(mse)\n",
-        "    print(\"RMSE OF TEST DATA IS : \", rmse)"
+        "    print(\"RMSE será: \", rmse)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1386,25 +1297,13 @@
       "metadata": {
         "id": "tT6twvlnPjGa",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "d80f8ccf-556b-4b92-b0cb-95fe886e0ccf"
+        "colab": {}
       },
       "source": [
-        "rmse_test(y_total_test, pred, x_test)"
+        "rmse_test(y_test, pred, x_test)"
       ],
-      "execution_count": 202,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "RMSE OF TEST DATA IS :  37137.29305500513\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
